# projeto-mercado1.0

./: API_GUIDE.md  Cargo.toml  README.md  app.js  index.html  instrucoes.txt  login.html  server.js  style.css  test_endpoints.ps1
data/: schema.sql
src/: auth.rs  main.rs
tests/: auth_login.rs  auth_protection.rs  auth_register.rs  auth_session.rs  cart_flow.rs  checkout.rs  common.rs  health_check.rs
tools/: dump_db.py  monitor_pedidos.py
